<<<<<<< HEAD
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"

  android:layout_width="fill_parent"

  android:layout_height="fill_parent">
  	

       
  

<TableLayout android:id="@+id/TableLayout01" android:layout_alignParentTop="true" android:layout_width="wrap_content"  android:stretchColumns="0,1,2" android:layout_height="wrap_content" >

<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content">
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vol_up_str" android:id="@+id/apple_volup" android:layout_weight="50" android:drawableTop="@drawable/speaker_plus"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mute" android:id="@+id/apple_menu" android:layout_weight="50" android:drawableTop="@drawable/speaker_off"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tvplus" android:id="@+id/apple_next" android:layout_weight="50" android:drawableTop="@drawable/tv_plus"/>

</TableRow>
<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vol_down_str" android:id="@+id/apple_voldn" android:layout_weight="50" android:drawableTop="@drawable/speaker_minus"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/power" android:id="@+id/apple_play" android:layout_weight="50" android:drawableTop="@drawable/stop"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tvminus" android:id="@+id/apple_prev" android:layout_weight="50" android:drawableTop="@drawable/tv_minus"/>
</TableRow>
<TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content">
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/movies001" android:id="@+id/movie001" android:layout_weight="50" android:drawableTop="@drawable/klxq"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/movies002" android:id="@+id/movie002" android:layout_weight="50" android:drawableTop="@drawable/bxjg2"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/movies003" android:id="@+id/movie003" android:layout_weight="50" android:drawableTop="@drawable/gongfu"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/movies004" android:id="@+id/movie004" android:layout_weight="50" android:drawableTop="@drawable/zszz"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/movies005" android:id="@+id/movie005" android:layout_weight="50" android:drawableTop="@drawable/mjxz"/>

</TableRow>






<RelativeLayout         android:layout_alignParentBottom="true" 
android:id="@+id/InnerRelativeLayout"

>
   






<Spinner android:layout_height="wrap_content" android:focusable="true" android:id="@+id/Spinner02" android:layout_width="fill_parent"  android:layout_alignParentBottom="true"></Spinner>
 <TextView  
         android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:layout_marginTop="10dip"  
        android:layout_above="@+id/Spinner01"
       android:text="@string/planet_prompt" 
    />
=======
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"

  android:layout_width="fill_parent"

  android:layout_height="fill_parent">
  	

       
  

<TableLayout android:id="@+id/TableLayout01" android:layout_alignParentTop="true" android:layout_width="wrap_content"  android:stretchColumns="0,1,2" android:layout_height="wrap_content" >

<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content">
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vol_up_str" android:id="@+id/apple_volup" android:layout_weight="50" android:drawableTop="@drawable/speaker_plus"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mute" android:id="@+id/apple_menu" android:layout_weight="50" android:drawableTop="@drawable/speaker_off"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tvplus" android:id="@+id/apple_next" android:layout_weight="50" android:drawableTop="@drawable/tv_plus"/>

</TableRow>
<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vol_down_str" android:id="@+id/apple_voldn" android:layout_weight="50" android:drawableTop="@drawable/speaker_minus"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/power" android:id="@+id/apple_play" android:layout_weight="50" android:drawableTop="@drawable/stop"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tvminus" android:id="@+id/apple_prev" android:layout_weight="50" android:drawableTop="@drawable/tv_minus"/>
</TableRow>
<TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content">
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/movies001" android:id="@+id/movie001" android:layout_weight="50" android:drawableTop="@drawable/klxq"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/movies002" android:id="@+id/movie002" android:layout_weight="50" android:drawableTop="@drawable/bxjg2"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/movies003" android:id="@+id/movie003" android:layout_weight="50" android:drawableTop="@drawable/gongfu"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/movies004" android:id="@+id/movie004" android:layout_weight="50" android:drawableTop="@drawable/zszz"/>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/movies005" android:id="@+id/movie005" android:layout_weight="50" android:drawableTop="@drawable/mjxz"/>

</TableRow>






<RelativeLayout         android:layout_alignParentBottom="true" 
android:id="@+id/InnerRelativeLayout"

>
   






<Spinner android:layout_height="wrap_content" android:focusable="true" android:id="@+id/Spinner02" android:layout_width="fill_parent"  android:layout_alignParentBottom="true"></Spinner>
 <TextView  
         android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:layout_marginTop="10dip"  
        android:layout_above="@+id/Spinner01"
       android:text="@string/planet_prompt" 
    />
>>>>>>> 4f70a995a1bcb9433e7eac8b3aa12122146e7052
     <Spinner android:layout_height="wrap_content" android:focusable="true" android:id="@+id/Spinner01" android:layout_width="fill_parent" android:prompt="@string/select" android:layout_above="@+id/Spinner02" android:layout_alignLeft="@+id/Spinner02" android:layout_alignRight="@+id/Spinner02"></Spinner>

</RelativeLayout>


</TableLayout>

</RelativeLayout>